--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>E-Shop</title>
-	<link rel="stylesheet" type="text/css" href="../easy/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" integrity="sha384-4LISF5TTJX/fLmGSxO53rV4miRxdg84mZsxmO8Rx5jGtp/LbrixFETvWa5a6sESd" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<script src="../easy/js/bootstrap.js"></script>
+	<script src="bootstrap/bootstrap.js"></script>
 </head>
 <body>
 	<div class="row">
 		<div class="col-sm-2 pt-3 ps-5">
 			<div class="pic">
-				<img src="two.png" width="100px" class="mt-3 ms-2">
+				<img src="images/two.png" width="100px" class="mt-3 ms-2">
 				<h5 class="d-inline eshop" style="position:absolute;top: 65px;"><b>E-Shop</b></h5 class="d-inline pt-2">
 			</div>
 			<div class="mt-5">
@@ -27,7 +27,7 @@
 			<div>
 				<div class="cards">
 					<p class="p2">Upgrade Your plan <br>To get pro service</p>
-					<img src="thirteen.png" width="210px">
+					<img src="images/thirteen.png" width="210px">
 					<button type="button" class="btn">Upgrade</button>
 				</div>
 				<button class="btn mt-4 mb-5 login" type="button" data-bs-toggle="modal" data-bs-target="#Modal"><i class="bi bi-box-arrow-in-left icons"></i>Login</button>
@@ -69,7 +69,7 @@
 					</button>
 					<div class="offcanvas offcanvas-start offcanvas-sm" id="myoff">
 						<div class="offcanvas-header">
-							<img src="two.png" width="100px" class="mt-3 ms-2">
+							<img src="images/two.png" width="100px" class="mt-3 ms-2">
 							<h5 class="d-inline eshop fw-bold" style="position:absolute;top: 65px;">E-Shop</h5 class="d-inline pt-2">
 							<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
 						</div>
@@ -83,7 +83,7 @@
 								<div class="text-secondary mt-1"><i class="bi bi-gear-fill icons"></i>Settings</div>
 								<div class="cards">
 									<p class="p2">Upgrade Your plan <br>To get pro service</p>
-									<img src="thirteen.png" width="210px">
+									<img src="images/thirteen.png" width="210px">
 									<button type="button" class="btn">Upgrade</button>
 								</div>
 							</div>
@@ -98,7 +98,7 @@
 					<i class="bi bi-bell-fill me-3" style="color: #a6a5a5;"></i>
 					<div class="dropdown d-inline">
 						<a href="#" class="dropdown-toggle" role="button" data-bs-toggle="dropdown">
-							<img src="one.png" width="30px" style="border-radius: 5px;margin-right: 10px;">
+							<img src="images/one.png" width="30px" style="border-radius: 5px;margin-right: 10px;">
 							<span class="car">Carter Kanter</span>
 						</a>
 						<ul class="dropdown-menu">
@@ -137,17 +137,17 @@
 				<table class="table table-sm" style="font-size:12px">
 					<tr>
 						<td style="padding: 15px 0px;"># &emsp;</td>
-						<td style="padding: 15px 0px;">Order ID <img src="fourteen.png" width="10px" style="margin-bottom: 2px;margin-left: 2px"> &emsp; &emsp;</td>
-						<td style="padding: 15px 0px;">Product Name <img src="fourteen.png" width="10px" style="margin-bottom: 2px;margin-left: 2px"></td>
-						<td style="padding: 15px 0px;">Address <img src="fourteen.png" width="10px" style="margin-bottom: 2px;margin-left: 2px"></td>
-						<td style="padding: 15px 0px;">Date <img src="fourteen.png" width="10px" style="margin-bottom: 2px;margin-left: 2px">&emsp; &emsp; &emsp;  &emsp;</td>
-						<td style="padding: 15px 0px;">Price  <img src="fourteen.png" width="10px" style="margin-bottom: 2px;margin-left: 2px">&emsp; &emsp; &emsp; &emsp;</td>
-						<td style="padding: 15px 0px;">Status <img src="fourteen.png" width="10px" style="margin-bottom: 2px;margin-left: 2px"></td>
+						<td style="padding: 15px 0px;">Order ID <img src="images/fourteen.png" width="10px" style="margin-bottom: 2px;margin-left: 2px"> &emsp; &emsp;</td>
+						<td style="padding: 15px 0px;">Product Name <img src="images/fourteen.png" width="10px" style="margin-bottom: 2px;margin-left: 2px"></td>
+						<td style="padding: 15px 0px;">Address <img src="images/fourteen.png" width="10px" style="margin-bottom: 2px;margin-left: 2px"></td>
+						<td style="padding: 15px 0px;">Date <img src="images/fourteen.png" width="10px" style="margin-bottom: 2px;margin-left: 2px">&emsp; &emsp; &emsp;  &emsp;</td>
+						<td style="padding: 15px 0px;">Price  <img src="images/fourteen.png" width="10px" style="margin-bottom: 2px;margin-left: 2px">&emsp; &emsp; &emsp; &emsp;</td>
+						<td style="padding: 15px 0px;">Status <img src="images/fourteen.png" width="10px" style="margin-bottom: 2px;margin-left: 2px"></td>
 					</tr>
 					<tr>
 						<td style="padding: 15px 0px;">1</td>
 						<td style="padding: 15px 0px;">#78522135</td>
-						<td style="padding: 15px 0px;"><img src="three.png" width="30px" class="me-2">Smart Watch</td>
+						<td style="padding: 15px 0px;"><img src="images/three.png" width="30px" class="me-2">Smart Watch</td>
 						<td style="padding: 15px 0px;">351 Shearwood Forest Drive</td>
 						<td style="padding: 15px 0px;">20/03/2021</td>
 						<td style="padding: 15px 0px;">$376.00</td>
@@ -158,7 +158,7 @@
 					<tr>
 						<td style="padding: 15px 0px;">2</td>
 						<td style="padding: 15px 0px;">#78522135</td>
-						<td style="padding: 15px 0px;"><img src="four.png" width="30px" class="me-2">Headphones</td>
+						<td style="padding: 15px 0px;"><img src="images/four.png" width="30px" class="me-2">Headphones</td>
 						<td style="padding: 15px 0px;">6391 Elgin St. Celina</td>
 						<td style="padding: 15px 0px;">21/03/2021</td>
 						<td style="padding: 15px 0px;">$276.00</td>
@@ -169,7 +169,7 @@
 					<tr>
 						<td style="padding: 15px 0px;">3</td>
 						<td style="padding: 15px 0px;">#78522135</td>
-						<td style="padding: 15px 0px;"><img src="five.png" width="30px" class="me-2">Iphone Pro</td>
+						<td style="padding: 15px 0px;"><img src="images/five.png" width="30px" class="me-2">Iphone Pro</td>
 						<td style="padding: 15px 0px;">8502 Preston Rd. Inglewood</td>
 						<td style="padding: 15px 0px;">01/04/2021</td>
 						<td style="padding: 15px 0px;">$300.00</td>
@@ -180,7 +180,7 @@
 					<tr>
 						<td style="padding: 15px 0px;">4</td>
 						<td style="padding: 15px 0px;">#78522135</td>
-						<td style="padding: 15px 0px;"><img src="six.png" width="20px" class="me-2">Apple airpods pro</td>
+						<td style="padding: 15px 0px;"><img src="images/six.png" width="20px" class="me-2">Apple airpods pro</td>
 						<td style="padding: 15px 0px;">4571 Washington Ave. Manchester</td>
 						<td style="padding: 15px 0px;">01/04/2021</td>
 						<td style="padding: 15px 0px;">$200.00</td>
@@ -191,7 +191,7 @@
 					<tr>
 						<td style="padding: 15px 0px;">5</td>
 						<td style="padding: 15px 0px;">#78522135</td>
-						<td style="padding: 15px 0px;"><img src="seven.png" width="30px" class="me-2">Nike Air Max</td>
+						<td style="padding: 15px 0px;"><img src="images/seven.png" width="30px" class="me-2">Nike Air Max</td>
 						<td style="padding: 15px 0px;">3891 Ranchveiw Dr. Richardson</td>
 						<td style="padding: 15px 0px;">02/04/2021</td>
 						<td style="padding: 15px 0px;">$100.00</td>
@@ -202,7 +202,7 @@
 					<tr>
 						<td style="padding: 15px 0px;">6</td>
 						<td style="padding: 15px 0px;">#78522135</td>
-						<td style="padding: 15px 0px;"><img src="eight.png" width="30px" class="me-2">Girls Bag</td>
+						<td style="padding: 15px 0px;"><img src="images/eight.png" width="30px" class="me-2">Girls Bag</td>
 						<td style="padding: 15px 0px;">2972 Westheimer rd. Santa Ana</td>
 						<td style="padding: 15px 0px;">02/04/2021</td>
 						<td style="padding: 15px 0px;">$76.00</td>
@@ -213,7 +213,7 @@
 					<tr>
 						<td style="padding: 15px 0px;">7</td>
 						<td style="padding: 15px 0px;">#78522135</td>
-						<td style="padding: 15px 0px;"><img src="nine.png" width="30px" class="me-2">Canon 600d</td>
+						<td style="padding: 15px 0px;"><img src="images/nine.png" width="30px" class="me-2">Canon 600d</td>
 						<td style="padding: 15px 0px;">3517 W. Gray St. Utica</td>
 						<td style="padding: 15px 0px;">03/04/2021</td>
 						<td style="padding: 15px 0px;">$500.00</td>
@@ -224,7 +224,7 @@
 					<tr>
 						<td style="padding: 15px 0px;">8</td>
 						<td style="padding: 15px 0px;">#78522135</td>
-						<td style="padding: 15px 0px;"><img src="ten.png" width="30px" class="me-2">Apple Watch</td>
+						<td style="padding: 15px 0px;"><img src="images/ten.png" width="30px" class="me-2">Apple Watch</td>
 						<td style="padding: 15px 0px;">4140 Parker Rd. Allentown</td>
 						<td style="padding: 15px 0px;">07/04/2021</td>
 						<td style="padding: 15px 0px;">$300.00</td>
@@ -235,7 +235,7 @@
 					<tr>
 						<td style="padding: 15px 0px;">9</td>
 						<td style="padding: 15px 0px;">#78522135</td>
-						<td style="padding: 15px 0px;"><img src="eleven.png" width="30px" class="me-2">Alexa Box</td>
+						<td style="padding: 15px 0px;"><img src="images/eleven.png" width="30px" class="me-2">Alexa Box</td>
 						<td style="padding: 15px 0px;">2464 Royal Ln. Mesa</td>
 						<td style="padding: 15px 0px;">09/04/2021</td>
 						<td style="padding: 15px 0px;">$76.00</td>
@@ -246,7 +246,7 @@
 					<tr>
 						<td style="padding: 15px 0px;">10</td>
 						<td style="padding: 15px 0px;">#78522135</td>
-						<td style="padding: 15px 0px;"><img src="twelve.png" width="30px" class="me-2">Apple Macbook Air 13"</td>
+						<td style="padding: 15px 0px;"><img src="images/twelve.png" width="30px" class="me-2">Apple Macbook Air 13"</td>
 						<td style="padding: 15px 0px;">3517 W. Gray St. Utica</td>
 						<td style="padding: 15px 0px;">10/04/2021</td>
 						<td style="padding: 15px 0px;">$600.00</td>
